# axolync-platform-wrapper

./: .gitignore  .gitmodules  APK_STATUS.md  DEVELOPER_HANDOFF.md  FUTURE_PLANS.md  README.md  SETUP.md  SPLASH_SCREEN_AND_SERVER_STATUS.md  SUBMODULE_SETUP.md  axolync.repo.toml  build.gradle.kts  package-lock.json  package.json  settings.gradle.kts
.kiro/: AI-SYSTEM-INSTRUCTIONS.md  GIT-WORKFLOW-POLICY.md
app/: build.gradle.kts  proguard-rules.pro
backlog/: tasks.md
config/: wrapper-authority.json  wrapper-layout.json
docs/: live-song-notification-bridge.md  physical-device-validation.md  wrapper-platform-authority.md
scripts/: serve-android-assets.mjs  stage-browser-assets.mjs  verify-apk-assets.mjs  verify-desktop-browser-assets.mjs  verify-wrapper-identity.mjs  verify-wrapper-source-ownership.mjs
templates/desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
templates/desktop/tauri/src-tauri/src/: generated_native_service_companion_runtime_config.json  main.rs  native_service_companion.rs
tests/: android-auto-launcher-surface.test.mjs  android-capture-routes.test.mjs  browser-agnostic-descriptor-guardrail.test.mjs  clean-native-microphone-route-guard.test.mjs  desktop-storage-placement.test.mjs  live-song-notification-android-bridge.test.mjs  lrclib-native-wrapper-runtime-support.test.mjs  repo-descriptor.test.mjs  stage-browser-assets.test.mjs  startup-splash-assets.test.mjs  tauri-macos-microphone-permission.test.mjs  verify-apk-assets.test.mjs  verify-desktop-browser-assets.test.mjs  wrapper-authority.test.mjs  wrapper-default-authority.test.mjs  (+3 more)
(+203 files in other folders)
